--- a/index.html
+++ b/index.html
@@ -83,10 +83,54 @@
           </ul>
         </aside>
         <div class="list">
-          01 Reviving Retro PCs What happens when old PCs are given modern
-          upgrades? 02 Top 10 Laptops of 2022 Our best picks for various needs
-          and budgets. 03 The Growth of Gaming How the pandemic has sparked
-          fresh opportunities.
+          <div class="list-item">
+            <img
+              src="./assets/images/image-retro-pcs.jpg"
+              alt="retro pc image"
+              class="list-item-img"
+            />
+            <div class="list-item-description">
+              <p class="list-item-no">01</p>
+              <a class="list-item-link" href="#"
+                ><h3 >Reviving Retro PCs</h3></a
+              >
+              <p class="list-item-text">
+                What happens when old PCs are given modern upgrades?
+              </p>
+            </div>
+          </div>
+          <div class="list-item">
+            <img
+              src="./assets/images/image-top-laptops.jpg"
+              alt="retro pc image"
+              class="list-item-img"
+            />
+            <div class="list-item-description">
+              <p class="list-item-no">02</p>
+              <a class="list-item-link" href="#"
+                ><h3 ">Top 10 Laptops of 2022</h3></a
+              >
+              <p class="list-item-text">
+                Our best picks for various needs and budgets.
+              </p>
+            </div>
+          </div>
+          <div class="list-item">
+            <img
+              src="./assets/images/image-gaming-growth.jpg"
+              alt="retro pc image"
+              class="list-item-img"
+            />
+            <div class="list-item-description">
+              <p class="list-item-no">03</p>
+              <a class="list-item-link" href="#"
+                ><h3 ">The Growth of Gaming</h3></a
+              >
+              <p class="list-item-text">
+                How the pandemic has sparked fresh opportunities.
+              </p>
+            </div>
+          </div>
         </div>
       </main>
       <footer>
@@ -94,7 +138,7 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="#">Your Name Here</a>.
+          >. Coded by <a href="#">Yusuf Akılevi</a>.
         </div>
       </footer>
     </div>
