--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
     <title>Frontend Mentor | News homepage</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   </head>
   <body>
     <div class="container">
-      <header class="header">
+      <header class="header ">
         <img class="logo" src="./assets/images/logo.svg" alt="logo" />
         <nav class="main-nav">
           <a href="#">Home</a>
@@ -33,13 +34,17 @@
           <a href="#">Trending</a>
           <a href="#">Categories</a>
         </nav>
+        <button class="btn-mobile-nav">
+          <svg class="icon-mobile-nav" name="menu-outline" width="40" height="17" xmlns="http://www.w3.org/2000/svg"><g fill="#00001A" fill-rule="evenodd"><path d="M0 0h40v3H0zM0 7h40v3H0zM0 14h40v3H0z"/><path d="M0 0h40v3H0z"/></g></svg>
+          <svg class="icon-mobile-nav" name="close-outline" width="32" height="31" xmlns="http://www.w3.org/2000/svg"><g fill="#00001A" fill-rule="evenodd"><path d="m2.919.297 28.284 28.284-2.122 2.122L.797 2.419z"/><path d="M.797 28.581 29.081.297l2.122 2.122L2.919 30.703z"/></g></svg>
+        </button>
       </header>
       <main class="main">
         <article class="main-article">
           <picture>
             <source
               srcset="./assets/images/image-web-3-mobile.jpg"
-              media="(max-width:375px)"
+              media="(max-width:600px)"
             />
             <img
               class="main-article-img"
