--- a/index.html
+++ b/index.html
@@ -59,27 +59,27 @@
               power of the platforms back into the hands of the people. But is
               it really fulfilling its promise?
             </p>
-            <a class="main-article-link" href="#">Read more</a>
+            <a class="main-article-link" href="##">Read more</a>
           </div>
         </article>
         <aside>
           <h2 class="news-title">New</h2>
           <ul class="news-list">
             <li>
-              <a class="news-link" href="#">Hydrogen VS Electric Cars</a>
+              <a class="news-link" href="##">Hydrogen VS Electric Cars</a>
               <p class="news-text">
                 Will hydrogen-fueled cars ever catch up to EVs?
               </p>
             </li>
             <li>
-              <a class="news-link" href="#">The Downsides of AI Artistry</a>
+              <a class="news-link" href="##">The Downsides of AI Artistry</a>
               <p class="news-text">
                 What are the possible adverse effects of on-demand AI image
                 generation?
               </p>
             </li>
             <li>
-              <a class="news-link" href="#">Is VC Funding Drying Up?</a>
+              <a class="news-link" href="##">Is VC Funding Drying Up?</a>
               <p class="news-text">
                 Private funding by VC firms is down 50% YOY. We take a look at
                 what that means.
@@ -96,7 +96,7 @@
             />
             <div class="list-item-description">
               <p class="list-item-no">01</p>
-              <a class="list-item-link" href="#"
+              <a class="list-item-link" href="##"
                 ><h3 >Reviving Retro PCs</h3></a
               >
               <p class="list-item-text">
@@ -112,7 +112,7 @@
             />
             <div class="list-item-description">
               <p class="list-item-no">02</p>
-              <a class="list-item-link" href="#"
+              <a class="list-item-link" href="##"
                 ><h3 ">Top 10 Laptops of 2022</h3></a
               >
               <p class="list-item-text">
@@ -128,7 +128,7 @@
             />
             <div class="list-item-description">
               <p class="list-item-no">03</p>
-              <a class="list-item-link" href="#"
+              <a class="list-item-link" href="##"
                 ><h3 ">The Growth of Gaming</h3></a
               >
               <p class="list-item-text">
@@ -143,7 +143,7 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="#">Yusuf Akılevi</a>.
+          >. Coded by <a href="##">Yusuf Akılevi</a>.
         </div>
       </footer>
     </div>
